--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,30 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --lightHover: #fff9f4;
+  --darkHover: #2a004a;
+  --darkTheme: #11001f;
+
+  --font-Outfit: "Outfit", sans-serif;
+  --font-Ovo: "Ovo", serif;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+* {
+  font-family: Outfit;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.font-outfit {
+  font-family: var(--font-Outfit);
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.font-ovo {
+  font-family: var(--font-Ovo);
+}
+
+.hover\:shadow-black:hover {
+  box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.65);
+}
+
+.hover\:shadow-white:hover {
+  box-shadow: 4px 4px 0 rgba(255, 255, 255, 0.65);
 }
